# rust_event_driven

./: README.md  docker-compose.yml
collector/: Cargo.toml  Dockerfile
collector/src/: main.rs  my_cors.rs  rediss.rs
data_aggregator/: .env  Cargo.toml  Dockerfile
data_aggregator/migrations/2023-03-22-081719_create_tasks/: up.sql
data_aggregator/src/: db.rs  main.rs  rediss.rs  schema.rs  task.rs
mock_publisher/: Cargo.toml  package-lock.json  package.json
mock_publisher/src/: App.js  main.rs
nginx/conf.d/: default.conf
