[package]
name = "data_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.22.3"
serde_json = "1.0.94"
dotenvy = "0.15.6"
celery = "0.5.3"
serde = { version = "1.0.158", features = ["derive"] }
diesel = { version = "2.0.3", features = ["postgres"] }
